$Id$

2006-03-22 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.c: Added --randomseed option, which allows the PRNG seed
	  to be specified.  This enables packets with payloads containing
	  random data, such as Key Exchange and Nonce, to be compared with
	  known good examples for testing.  It also allows the packet data to
	  be exactly repeatable, which can be useful in some situations.

2006-03-19 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.c: Use unsigned 64-bit integer arithmetic for interval
	  calculation instead of double-precision floating point.  This
	  avoids the small rounding errors that can occur with floating point.

2006-03-14 Roy Hills <Roy.Hills@nta-monitor.com>

	* Moved ike-scan source code from RCS to CVS revision control.

2005-12-07 Roy Hills <Roy.Hills@nta-monitor.com>

	* Released v1.8  Tarball size: 1376995, Zip size: 2090803.
	  tarball md5sum: 961310e6f3c07d26c90447e392dfb97e
	  Zip md5sum: 884e1c3eb03ea1519ab7537e095d2c0b

	* configure.ac: Incremented version number to 1.8.1 in preparation
	  for post 1.8 changes.

2005-12-06 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac: Incremented version number to 1.8 in preparation
	  for release.

2005-12-04 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-backoff-patterns: Added backoff patterns for Netgear ProSafe
	  and Netgear ADSL Firewall Router.  Submitted by Paul Askew.

2005-11-30 Roy Hills <Roy.Hills@nta-monitor.com>

	* Removed automake boilerplace files, and ran automake --add-missing
	  --copy to obtain the latest versions as of automake 1.9.  The updated
	  files were: missing, install-sh, depcomp and INSTALL.  mkinstalldirs
	  is no longer installed by automake and is probably no longer needed.
	  However, I have kept the old version just in case.

2005-11-29 Roy Hills <Roy.Hills@nta-monitor.com>

	* isakmp.h: Changed u_int8_t, u_int16_t and u_int32_t to uint8_t,
	  uint16_t and uint32_t in definition of delete payload.
